feat(api): add certificate API
