# src/main/kotlin/it/pagopa/touchpoint/jwtissuerservice/controllers/TokensController.kt
@@ -1,18 +1,26 @@
 package it.pagopa.touchpoint.jwtissuerservice.controllers
 
 import it.pagopa.generated.touchpoint.jwtissuerservice.v1.api.TokensApi
+import it.pagopa.generated.touchpoint.jwtissuerservice.v1.model.CertificatesResponseDto
 import it.pagopa.generated.touchpoint.jwtissuerservice.v1.model.CreateTokenRequestDto
 import it.pagopa.generated.touchpoint.jwtissuerservice.v1.model.CreateTokenResponseDto
 import it.pagopa.generated.touchpoint.jwtissuerservice.v1.model.JWKSResponseDto
+import it.pagopa.touchpoint.jwtissuerservice.exceptions.RestApiException
 import it.pagopa.touchpoint.jwtissuerservice.mdcutilities.LogTracingUtils
 import it.pagopa.touchpoint.jwtissuerservice.mdcutilities.LogTracingUtils.AttributeKeys
+import it.pagopa.touchpoint.jwtissuerservice.services.CertificatesService
 import it.pagopa.touchpoint.jwtissuerservice.services.TokensService
 import kotlinx.coroutines.reactive.awaitSingle
+import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
+import reactor.core.publisher.Mono
 
 @RestController
-class TokensController(private val tokensService: TokensService) : TokensApi {
+class TokensController(
+    private val tokensService: TokensService,
+    private val certificatesService: CertificatesService,
+) : TokensApi {
     override suspend fun createJwtToken(
         createTokenRequestDto: CreateTokenRequestDto
     ): ResponseEntity<CreateTokenResponseDto> =
@@ -36,6 +44,25 @@ class TokensController(private val tokensService: TokensService) : TokensApi {
             }
             .map { v -> ResponseEntity.ok(v) }
             .awaitSingle()
+
+    override suspend fun getTokenPublicCertificates(
+        certificateName: String,
+        validForDays: Int,
+    ): ResponseEntity<CertificatesResponseDto> {
+        return certificatesService
+            .getCertificateByNameAndValidity(certificateName, validForDays)
+            .switchIfEmpty(
+                Mono.error(
+                    RestApiException(
+                        HttpStatus.NOT_FOUND,
+                        "Unable to retrieve certificates",
+                        "No valid KeyVault certificate found ",
+                    )
+                )
+            )
+            .map { v -> ResponseEntity.ok(v) }
+            .awaitSingle()
+    }
 
     override suspend fun getTokenPublicKeys(): ResponseEntity<JWKSResponseDto> =
         tokensService.getJwksKeys().map { v -> ResponseEntity.ok(v) }.awaitSingle()
